--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Vertigo</title>
 </head>
 <body>
-    <h1>Vertigo</h1>
+    <header>
+        <img src="./imagens/logo.svg" alt="LOGO">
+    </header>
+     <main>
+        <section class="descrição ">
+            <h1>Acesse a plataforma </h1>
+
+            <p>Faça login ainda hoje e começe seus projetos </p>
+        </section>
+
+        <section class="login">
+            <form action="">
+             <div class="input-box">
+            <label for="">Email</label>
+             <input type="email" placeholder="Digite seu email " id="Email">
+      </div>
+             <div class="input-box">
+            <label for="">Senha</label>
+             <input type="password" placeholder="Digite sua senha " id="Senha">
+      </div>
+        </form>
+        </section>
+     </main>
 </body>
 </html>
+
+<!--
+    mobile fist
